--- a/ege_perfil/static/css/main.css
+++ b/ege_perfil/static/css/main.css
@@ -2,4 +2,18 @@
     margin-bottom: 0 !important;
     padding-bottom: 0 !important;
 }
+
 #inspire h5 { margin: 0 }
+
+.radio_conf {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+}
+
+.card_check {
+    border-top: 2px solid lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
