--- a/ege_perfil/templates/ege_perfil/index.html
+++ b/ege_perfil/templates/ege_perfil/index.html
@@ -13,7 +13,9 @@
     <h5 class="p-4 text-center">
         {% trans "Welcome, " %}<span class="text-bold">{% firstof ege.user.social_name user.get_username %}!</span>
     </h5>
-    <v-btn flat small color="white">Configurações</v-btn>
+    <div id="edit">
+        <button_edit></button_edit>
+    </div>
     <a href="/ege/perfil/acessibilidade">Acessibilidade</a>
 {% endblock %}
 
@@ -59,7 +61,7 @@
                             <div class="text-justify">
                                 <v-layout align-center justify-space-around>
                                     <h5>Biografia</h5>
-                                    <v-dialog v-model="dialog_bio" persistent max-width="600px">
+                                    <v-dialog v-model="dialog_bio" persistent max-width="600px" v-if="edit_buttons">
                                         <v-btn slot="activator" outline fab color="blue" style="width: 2.2em;height: 2.2em">
                                             <v-icon>edit</v-icon>
                                         </v-btn>
@@ -103,7 +105,7 @@
                                 <v-layout align-baseline justify-space-between>
                                     <div class="d-flex align-center">
                                         <h5>E-mail</h5>
-                                        <v-dialog v-model="dialog_email" persistent max-width="600px">
+                                        <v-dialog v-model="dialog_email" persistent max-width="600px" v-if="edit_buttons">
                                             <v-btn slot="activator" outline fab color="blue" style="width: 2.2em;height: 2.2em">
                                                 <v-icon>edit</v-icon>
                                             </v-btn>
@@ -176,30 +178,15 @@
                                   <div class="text-left">
                                       <div class="row align-items-center ml-3">
                                           <h5>Recurso de acessibilidade</h5>
-                                          <v-btn outline fab color="blue" style="width: 2.2em;height: 2.2em" v-on:click="">
-                                            <v-icon>edit</v-icon>
-                                        </v-btn>
                                       </div>
-                                      <div v-if="`${selected}`" class="d-flex row justify-space-between m-3 mb-4">
+                                      <div v-if="recursos" class="d-flex row justify-space-between m-3 mb-4">
                                           <div class="text-left">
-                                              <p v-for="sel in selected" class="m-0">${sel}</p>
+                                              <p v-for="recurso in recursos" class="m-0">${recurso}</p>
                                           </div>
                                       </div>
                                   </div>
                               </div>
-                              <div v-if="accessibility">
-                                  <div class="row">
-                                      <div class="col-5">
-                                          <v-checkbox v-model="selected" v-for="(spneed, index) in special_needs" :label="`${spneed}`" :value="`${spneed}`" v-if="`${index}` < `${special_needs.length/2}`" class="align-center" style="height: 3em"></v-checkbox>
-                                      </div>
-                                      <div class="col-5">
-                                          <v-checkbox v-model="selected" v-for="(spneed, index) in special_needs" :label="`${spneed}`" :value="`${spneed}`" v-if="`${index}` >= `${special_needs.length/2}`" class="align-center" style="height: 3em"></v-checkbox>
-                                      </div>
-                                  </div>
-                                  <div class="row justify-content-end">
-                                      <v-btn round outline fab color="primary" style="width: 5em; height: 2em">RECONFIGURAR ACESSIBILIDADE</v-btn>
-                                  </div>
-                              </div>
+                              <v-btn round outline color="primary" style="height: 2em" v-on:click="edit_recursos">RECONFIGURAR ACESSIBILIDADE</v-btn>
                           </div>
                         </div>
 
@@ -212,7 +199,7 @@
                                   <div class="text-left">
                                       <div class="row align-items-center ml-3">
                                           <h5>Necessidades especiais</h5>
-                                          <v-btn outline fab color="blue" style="width: 2.2em;height: 2.2em" v-on:click="options_needs=!options_needs">
+                                          <v-btn outline fab color="blue" style="width: 2.2em;height: 2.2em" v-on:click="options_needs=!options_needs" v-if="edit_buttons">
                                               <v-icon>edit</v-icon>
                                           </v-btn>
                                       </div>
