--- a/ege_perfil/templates/ege_perfil/painel_acessibilidade.html
+++ b/ege_perfil/templates/ege_perfil/painel_acessibilidade.html
@@ -73,27 +73,27 @@
                       <div class="row">
                           <div class="col">
                               <!--BAIXA VISÃO-->
-                              <v-card class="elevation-12 m-2 card_check" style="height: 12em;cursor: pointer">
+                              <v-card class="elevation-12 m-2 card_check">
                                   <v-card-title primary-title>
-                                      <h3 class="headline">Baixa visão</h3>
+                                      <h3 class="headline w-100 text-left">Baixa visão</h3>
                                       <p class="text-left">Clique aqui se tiver baixa visão.</p>
                                   </v-card-title>
                               </v-card>
                           </div>
                           <div class="col">
                               <!--LEGENDAGEM-->
-                              <v-card class="elevation-12 m-2 card_check" style="height: 12em;cursor: pointer">
+                              <v-card class="elevation-12 m-2 card_check">
                                   <v-card-title primary-title>
-                                      <h3 class="headline">Legendagem</h3>
+                                      <h3 class="headline w-100 text-left">Legendagem</h3>
                                       <p class="text-left">Clique aqui se precisar deste recurso.</p>
                                   </v-card-title>
                               </v-card>
                           </div>
                           <div class="col">
                               <!--CONFIGURAÇÕES DE COR-->
-                              <v-card class="elevation-12 m-2 card_check" style="height: 12em;cursor: pointer">
+                              <v-card class="elevation-12 m-2 card_check">
                                   <v-card-title primary-title>
-                                      <h3 class="headline">Configurações de cor</h3>
+                                      <h3 class="headline w-100 text-left">Configurações de cor</h3>
                                       <p class="text-left">Clique aqui se possuir algum tipo de daltonismo, fotofobia ou desconforto com alguma cor.</p>
                                   </v-card-title>
                               </v-card>
