--- a/ege_perfil/static/css/main.css
+++ b/ege_perfil/static/css/main.css
@@ -5,6 +5,12 @@
 
 #inspire h5 { margin: 0 }
 
+.topic {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
 .radio_conf {
     display: flex;
     justify-content: center;
@@ -16,4 +22,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 12em;
+    cursor: pointer
 }
