--- a/ege_perfil/static/css/main.css
+++ b/ege_perfil/static/css/main.css
@@ -1,27 +1,33 @@
-.v-input__control > * {
-    margin-bottom: 0 !important;
-    padding-bottom: 0 !important;
+.mi_card {
+    margin: 1.5rem !important;
+    padding: 1rem;
 }
 
-#inspire h5 { margin: 0 }
-
-.topic {
-    font-size: 15px;
-    font-weight: bold;
-    margin-bottom: 0;
+.mi_card > h3,
+.mi_card > p {
+    text-align: left;
 }
 
-.radio_conf {
-    display: flex;
-    justify-content: center;
-    margin: 10px 0;
+.mi_card > p {
+    font-size: 16px;
 }
 
-.card_check {
-    border-top: 2px solid lightgray;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 12em;
-    cursor: pointer
+.libras img {
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 1024px) {
+    .card_list {
+        display: grid;
+        grid-template-areas:
+            'ledor libras'
+            'nada libras';
+        grid-gap: 10px;
+        padding: 10px;
+    }
+
+    .ledor { grid-area: ledor; }
+    .libras { grid-area: libras; }
+    .nada { grid-area: nada; }
 }
